[package]
name = "frostwin"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.14.0", features = ["default","advanced","canvas","tokio","image"]}
chrono = "0.4.42"
base64 = "0.22.1"
windows = { version = "0.62.2", features = [
    "Win32_Media",
    "Win32_NetworkManagement",
    "Win32_Media_Audio",
    "Win32_Networking",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Shutdown",] }
x-win = "5.4.0"
alphanumeric-sort = "1.5.5"
dirs = "6.0.0"
battery = "0.7.8"
iced_aw = {version = "0.13.0", features = ["context_menu"]}
serde_json = "1.0.149"
serde_derive = "1.0.228"
serde = "1.0.228"

[patch.crates-io]
x-win = {path = "external/x-win-5.4.0"}